--- a/src/style.css
+++ b/src/style.css
@@ -1,89 +1,136 @@
-@import url('https://fonts.googleapis.com/css?family=Poppins:200,300,400,500,600,700,800,900&display=swap');
-
-* {
-    margin: 0;
-    padding: 0;
-    font-family: 'Monospace';
-}
-
+html,
 body {
-    background-color: black;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
-    min-height: 90vh;
-    width: 300px;
+  height: 100%;
+  margin: 0;
+  padding: 0;
 }
 
-h1 {
-    font-size: 3rem;
-    margin-top: 20px;
-    color: white;
-    transition: background-size 300ms ease;
-    background-image: linear-gradient(90deg, red, blue);
-    background-size: 0% 3px;
-    background-repeat: no-repeat;
-    background-position: left bottom;
-    text-decoration: none;
+.popup_container {
+  width: 500px;
+  max-height: 500px;
+  background-color: #e0e0e0;
+  border: 1px solid #cccccc;
+  box-shadow: 2px 2px 10px #cccccc;
+  border-radius: 0.75rem;
+  padding: 1rem;
 }
 
-h1:hover {
-    background-size: 100% 3px;
+header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
-h2 {
-    font-size: 2rem;
-    color: whitesmoke;
-    text-align: center;
-}
-.container {
-    padding: 10px;
-    background-color: #141414ef;
-    box-shadow: 2px 3px 9px #2f3e2f;
-    width: 500px;
-    border-radius: 6px;
-    margin: 30px 0;
+footer {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 0.1rem;
 }
 
-button {
-    background-color: transparent;
-    border: 2.5px solid whitesmoke;
-    color: white;
-    font-style: italic;
-    border-radius: 5px;
-    cursor: pointer;
-    font-size: 1.3rem;
-    padding: 15px 20px;
-    margin-top: 20px;
-    width: 100%;
-    margin-bottom: 20px;
+header h1 {
+  font-weight: lighter;
+  font-size: 2em;
+  letter-spacing: 0.1em;
+  display: block;
+  position: relative;
+  padding: 0.1em 0;
 }
 
-button:hover {
-    box-shadow: 1px 2px 8px grey;
-    background-color: white;
-    color: black;
-    transition: 0.8s;
+header h1::after {
+  content: "";
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 2px;
+  background-color: hotpink;
+  opacity: 0;
+  transition: opacity 300ms, transform 300ms;
 }
 
-@media (max-width: 550px) {
-    .container {
-        width: 400px;
-    }
+header h1:hover::after,
+header h1:focus::after {
+  opacity: 1;
+  transform: translate3d(0, 0.1em, 0);
+}
+.close_btn {
+  font-family: lato, sans-serif;
+  font-size: 1em;
+  letter-spacing: 0.1em;
+  color: black;
+  padding: 10px 40px 10px 40px;
+  border: 3px solid black;
+  border-radius: 20px;
 }
 
-@media (max-width:  450px) {
+.cross_text {
+  display: none;
+  font-weight: lighter;
+}
 
-    .container {
-        width: 85vw;
-    }
+.cross {
+  display: inline;
+}
 
-    h1 {
-        font-size: 1.5rem;
-    }
+.close_btn:hover .cross_text {
+  display: inline;
+}
 
-    button {
-        font-size: 1rem;
-    }
+.close_btn:hover .cross {
+  display: none;
+}
+
+.content {
+  overflow-y: auto;
+  max-height: 400px;
+}
+
+.question {
+  margin: 0.5rem;
+  border-bottom: 1px solid purple;
+}
+
+.question h2 {
+  font-weight: lighter;
+  font-size: 1.5em;
+  letter-spacing: 0.05em;
+}
+
+.options {
+  display: flex;
+  flex-direction: column;
+  gap: 0.75rem;
+  padding: 1rem;
+}
+
+.options button {
+  font-family: "Times New Roman", Times, serif;
+  padding: 0.5rem;
+  border: 1px solid #cccccc;
+  border-radius: 0.5rem;
+  font-size: medium;
+  background-color: rgba(0, 0, 0, 0.2);
+  border: 1px solid black;
+  cursor: pointer;
+}
+
+.options button:hover {
+  background-color: rgba(0, 0, 0, 0.1);
+  box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.2);
+}
+
+footer a {
+  color: black;
+  text-decoration: none;
+  font-weight: bold;
+  font-size: 1em;
+}
+
+footer small {
+  bottom: 0;
+  font-weight: lighter;
+  font-size: 0.75em;
+  letter-spacing: 0.05em;
 }
